Update src/test/java/org/openrewrite/docker/DockerfileParserTest.java
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>