@@ -574,7 +574,7 @@ class DockerfileParserTest implements RewriteTest {
                 Dockerfile.From from = (Dockerfile.From) doc.getInstructions().getLast();
                 List<Dockerfile.ArgumentContent> contents = from.getImage().getContents();
                 assertThat(contents).hasSize(4);
-                assertThat(contents.get(0)).extracting(arg -> ((Dockerfile.EnvironmentVariable)arg).getName()).isEqualTo("REGISTRY");
+                assertThat(contents.getFirst()).extracting(arg -> ((Dockerfile.EnvironmentVariable)arg).getName()).isEqualTo("REGISTRY");
                 assertThat(contents.get(1)).extracting(arg -> ((Dockerfile.PlainText)arg).getText()).isEqualTo("/image:");
                 assertThat(contents.get(2)).extracting(arg -> ((Dockerfile.EnvironmentVariable)arg).getName()).isEqualTo("VERSION");
                 assertThat(contents.get(3)).extracting(arg -> ((Dockerfile.PlainText)arg).getText()).isEqualTo("-suffix");
